feat(cache): implement caching for various services and update cache configurations